#10503 diff view dropdown align issue

--- a/src/app/pages/specifications/specifications-header/specifications-header.component.scss
+++ b/src/app/pages/specifications/specifications-header/specifications-header.component.scss
@@ -39,9 +39,9 @@
     margin-top: 10px
 }
 
-:host ::ng-deep .view-dropdown .p-dropdown {
-    margin-top: -12px;
-}
+// :host ::ng-deep .view-dropdown .p-dropdown {
+//     margin-top: -12px;
+// }
 
 :host ::ng-deep .app-dropdown-version .p-dropdown .p-dropdown-label {
     border-top-left-radius: 30px;
